fix overflow

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,5 +1,1 @@
 @import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
-
-html {
-  overflow: hidden auto;
-}
